[gd_scene load_steps=6 format=3 uid="uid://c5jerd0r5ard8"]

[ext_resource type="PackedScene" uid="uid://c7axrk5wwb6ab" path="res://scenes/GUI/containers/gui_popup_container.tscn" id="1_45vf8"]
[ext_resource type="Script" uid="uid://bfcef4564ljl2" path="res://scenes/GUI/containers/gui_settings_menu.gd" id="2_krgl2"]
[ext_resource type="PackedScene" uid="uid://dmfmdx0qsjb88" path="res://scenes/GUI/controls/sliders/gui_audio_setting_slider.tscn" id="3_bs2bx"]
[ext_resource type="PackedScene" uid="uid://c0pj4bmuxbn87" path="res://scenes/GUI/controls/tab/gui_tabbar.tscn" id="3_kadq4"]
[ext_resource type="PackedScene" uid="uid://bgeepmq2eiey4" path="res://scenes/GUI/controls/buttons/gui_rich_text_button.tscn" id="5_v74bq"]

[node name="GUISettingsMenu" instance=ExtResource("1_45vf8")]
offset_left = -120.0
offset_top = -71.0
offset_right = 120.0
offset_bottom = 71.0
script = ExtResource("2_krgl2")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Background/NinePatchRect/MarginContainer" index="0"]
layout_mode = 2

[node name="GUITabbar" parent="VBoxContainer/Background/NinePatchRect/MarginContainer/VBoxContainer" index="0" instance=ExtResource("3_kadq4")]
unique_name_in_owner = true
layout_mode = 2
tab_localization_titles = Array[String](["GAMEPLAY", "AUDIO"])

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Background/NinePatchRect/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_right = 6

[node name="Audios" type="VBoxContainer" parent="VBoxContainer/Background/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer" index="0"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="MasterAudio" parent="VBoxContainer/Background/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/Audios" index="0" instance=ExtResource("3_bs2bx")]
unique_name_in_owner = true
layout_mode = 2
audio_bus = "Master"

[node name="MusicAudio" parent="VBoxContainer/Background/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/Audios" index="1" instance=ExtResource("3_bs2bx")]
unique_name_in_owner = true
layout_mode = 2
audio_bus = "Music"

[node name="SFXAudio" parent="VBoxContainer/Background/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/Audios" index="2" instance=ExtResource("3_bs2bx")]
unique_name_in_owner = true
layout_mode = 2
audio_bus = "SFX"

[node name="GamePlay" type="VBoxContainer" parent="VBoxContainer/Background/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Background/NinePatchRect/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2
size_flags_vertical = 10

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer/Background/NinePatchRect/MarginContainer/VBoxContainer" index="3"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="BackButton" parent="VBoxContainer/Background/NinePatchRect/MarginContainer/VBoxContainer/Buttons" index="0" instance=ExtResource("5_v74bq")]
unique_name_in_owner = true
custom_minimum_size = Vector2(18, 10)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
localization_text_key = "BACK"

[node name="DefaultButton" parent="VBoxContainer/Background/NinePatchRect/MarginContainer/VBoxContainer/Buttons" index="1" instance=ExtResource("5_v74bq")]
unique_name_in_owner = true
custom_minimum_size = Vector2(18, 10)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
localization_text_key = "DEFAULT"

[node name="CancelButton" parent="VBoxContainer/Background/NinePatchRect/MarginContainer/VBoxContainer/Buttons" index="2" instance=ExtResource("5_v74bq")]
unique_name_in_owner = true
custom_minimum_size = Vector2(18, 10)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
focus_mode = 0
localization_text_key = "RESET"

[node name="SaveButton" parent="VBoxContainer/Background/NinePatchRect/MarginContainer/VBoxContainer/Buttons" index="3" instance=ExtResource("5_v74bq")]
unique_name_in_owner = true
custom_minimum_size = Vector2(19, 10)
layout_mode = 2
focus_mode = 0
localization_text_key = "SAVE"
